# passpick

./: README.md  pyproject.toml
src/passpick/: main.py  util.py
src/passpick/dataset/: words.py
src/passpick/generator/: generator.py
